chore: microcopy consistente

--- a/index.html
+++ b/index.html
@@ -53,41 +53,41 @@
   <main id="contenido">
     <section class="hero" role="region" aria-label="Bienvenida">
      <div class="hero-content"><span class="hero-emoji" aria-hidden="true">🌿</span>
-      <h1>Te damos la bienvenida a Espacio Saludable</h1>
-      <p>Dietética consciente donde encontrás productos naturales seleccionados e información basada en evidencia para tu bienestar.</p>
-      <p class="hero-subtitle">Suplementos, alimentos sin TACC, veganos, gourmet y guías para acompañarte en tu camino hacia una vida más saludable.</p>
-      <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-top: 2rem;"><a href="#guias" class="btn">Explorar Guías</a> <a href="#productos" class="btn btn-secondary">Ver Productos</a>
+      <h1>Bienvenido a Espacio Saludable</h1>
+      <p>Dietética consciente con productos naturales cuidadosamente seleccionados e información basada en evidencia para tu bienestar.</p>
+      <p class="hero-subtitle">Suplementos, sin TACC, veganos, gourmet y guías para acompañarte en tu camino hacia una vida más saludable.</p>
+      <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-top: 2rem;"><a href="#guias" class="btn">Descubrí las Guías</a> <a href="#productos" class="btn btn-secondary">Mirá los Productos</a>
       </div>
      </div>
     </section><!-- Guías Interactivas (CONTENIDO DE VALOR PRIMERO) -->
     <section id="guias" role="region" aria-labelledby="guias-title">
      <div class="section-content">
       <h2 id="guias-title" class="section-title">Guías de Bienestar</h2>
-      <p class="section-subtitle">Información verificada, basada en evidencia científica y explicada con claridad para que tomes decisiones informadas</p>
+      <p class="section-subtitle">Información clara, verificada y basada en evidencia para que tomes decisiones conscientes sobre tu salud</p>
       <div class="guides-grid">
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🥑</span> <span class="guide-tag">Nutrición</span>
         <h3>Guía Keto</h3>
-        <p>Todo sobre alimentación cetogénica con evidencia científica, recetas y consejos prácticos para tu día a día.</p><a href="keto.html" class="btn">Explorar Guía</a>
+        <p>Alimentación cetogénica consciente: qué es, cómo empezar sin extremos y productos que te acompañan.</p><a href="keto.html" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🌱</span> <span class="guide-tag">Plant-Based</span>
         <h3>Guía Vegana</h3>
-        <p>Alimentación vegana equilibrada, suplementación necesaria y cómo disfrutar este estilo de vida de forma saludable.</p><a href="/guias/vegano" class="btn">Explorar Guía</a>
+        <p>Cómo vivir 100% plant-based con nutrición completa, suplementación y consciencia práctica.</p><a href="/guias/vegano" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🌾</span> <span class="guide-tag">Celiaquía</span>
         <h3>Guía Sin TACC</h3>
-        <p>Todo sobre alimentación sin gluten, contaminación cruzada y vida sin TACC con tranquilidad y seguridad.</p><a href="/guias/sin-tacc" class="btn">Explorar Guía</a>
+        <p>Celiaquía y vida sin gluten: qué, cómo y con qué tranquilidad vivir de forma segura cada día.</p><a href="/guias/sin-tacc" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">💙</span> <span class="guide-tag">Salud Metabólica</span>
         <h3>Guía Diabetes &amp; Glucosa</h3>
-        <p>Entendé tu glucosa, aprendé a manejar la diabetes con herramientas basadas en evidencia para tu bienestar.</p><a href="/guias/diabetes" class="btn">Explorar Guía</a>
+        <p>Entiende tu glucosa y maneja la diabetes con herramientas prácticas y basadas en evidencia.</p><a href="/guias/diabetes" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">💪</span> <span class="guide-tag">Performance</span>
         <h3>Guía de Suplementos</h3>
-        <p>Suplementación deportiva con respaldo científico. Qué funciona realmente y qué no, explicado con claridad.</p><a href="/guias/suplementos" class="btn">Explorar Guía</a>
+        <p>Qué suplementos funcionan, cuáles no y cómo elegir lo que realmente necesitas con evidencia real.</p><a href="/guias/suplementos" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">✨</span> <span class="guide-tag">Mindfulness</span>
         <h3>Guía de Bienestar Espiritual</h3>
-        <p>Conectá con tu interior, descubrí prácticas de bienestar emocional desde un lugar suave y contenedor.</p><a href="/guias/espiritualidad" class="btn">Explorar Guía</a>
+        <p>Prácticas para conectar contigo mismo, bienestar emocional y mindfulness desde la escucha.</p><a href="/guias/espiritualidad" class="btn">Leer la Guía</a>
        </article>
       </div>
      </div>
@@ -95,38 +95,38 @@
     <section id="productos" class="productos-section" role="region" aria-labelledby="productos-title">
      <div class="section-content">
       <h2 id="productos-title" class="section-title">Nuestros Productos</h2>
-      <p class="section-subtitle">Seleccionamos cada producto con cuidado para ofrecerte calidad, información clara y acompañamiento en tu elección</p>
+      <p class="section-subtitle">Cada producto está cuidadosamente seleccionado: calidad real, información transparente y acompañamiento en tu elección</p>
       <div class="productos-grid">
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">🌾</span>
         <h3>Sin TACC</h3>
-        <p>Alimentos libres de gluten, certificados y seguros para personas con celiaquía.</p><a href="/tienda/sin-tacc" class="btn">Ver Productos</a>
+        <p>Alimentos certificados y seguros para celiaquía. Sin gluten, sin culpa, con certeza.</p><a href="/tienda/sin-tacc" class="btn">Descubrí</a>
        </article>
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">🌱</span>
         <h3>Veganos</h3>
-        <p>Productos 100% plant-based para una alimentación equilibrada y consciente.</p><a href="/tienda/vegano" class="btn">Ver Productos</a>
+        <p>100% plant-based. Nutrición completa, consciente y deliciosa en cada producto.</p><a href="/tienda/vegano" class="btn">Descubrí</a>
        </article>
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">💊</span>
-        <h3>Suplementos Dietarios</h3>
-        <p>Suplementación de calidad respaldada por evidencia y transparencia en la información.</p><a href="/tienda/suplementos" class="btn">Ver Productos</a>
+        <h3>Suplementos</h3>
+        <p>Suplementación de calidad, transparente y respaldada por evidencia real.</p><a href="/tienda/suplementos" class="btn">Descubrí</a>
        </article>
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">🍵</span>
-        <h3>Tés y Blends Funcionales</h3>
-        <p>Infusiones naturales para acompañar tu bienestar con propiedades específicas.</p><a href="/tienda/tes" class="btn">Ver Productos</a>
+        <h3>Tés y Infusiones</h3>
+        <p>Blends naturales para acompañar tu bienestar con propiedades reales y sabor auténtico.</p><a href="/tienda/tes" class="btn">Descubrí</a>
        </article>
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">✨</span>
         <h3>Bienestar Emocional</h3>
-        <p>Productos para tu práctica espiritual, mindfulness y conexión interior.</p><a href="/tienda/espiritualidad" class="btn">Ver Productos</a>
+        <p>Herramientas para mindfulness, meditación y conexión contigo mismo.</p><a href="/tienda/espiritualidad" class="btn">Descubrí</a>
        </article>
        <article class="producto-card"><span class="producto-icon" aria-hidden="true">🥗</span>
         <h3>Gourmet Saludable</h3>
-        <p>Alimentos seleccionados para disfrutar con consciencia y placer.</p><a href="/tienda/gourmet" class="btn">Ver Productos</a>
+        <p>Lo mejor de la gastronomía consciente: placer y salud en cada bocado.</p><a href="/tienda/gourmet" class="btn">Descubrí</a>
        </article>
       </div>
      </div>
     </section><!-- Quiénes Somos -->
     <section id="nosotros" class="about-section" role="region" aria-labelledby="about-title">
      <div class="section-content">
-      <h2 id="about-title" class="section-title">Quiénes Somos</h2>
+      <h2 id="about-title" class="section-title">Somos Espacio Saludable</h2>
       <div class="about-content">
        <div class="about-placeholder" aria-hidden="true">
         🌿
@@ -153,8 +153,8 @@
     </section><!-- CTA Final -->
     <section id="contacto" class="cta-section" role="region" aria-labelledby="cta-title">
      <div class="section-content">
-      <h2 id="cta-title">¿Tenés alguna consulta?</h2>
-      <p>Estamos acá para acompañarte con información clara y productos de calidad 💚</p><a href="https://wa.me/5492984521812?text=Hola%20💚%20Quiero%20consultar%20sobre%20productos%20y%20guías%20de%20Espacio%20Saludable" class="btn" style="background: var(--blanco); color: var(--verde-oscuro);" target="_blank" rel="noopener noreferrer">Hablemos por WhatsApp</a>
+      <h2 id="cta-title">¿Tenés una pregunta?</h2>
+      <p>Escribinos. Estamos acá para acompañarte con claridad 💚</p><a href="https://wa.me/5492984521812?text=Hola%20💚%20Tengo%20una%20consulta%20sobre%20Espacio%20Saludable" class="btn" style="background: var(--blanco); color: var(--verde-oscuro);" target="_blank" rel="noopener noreferrer">Escribir a WhatsApp</a>
      </div>
     </section>
    </main><!-- Footer -->
