--- a/keto.html
+++ b/keto.html
@@ -284,8 +284,8 @@
     </section><!-- CTA Final -->
     <section class="cta-section" role="region" aria-labelledby="cta-title">
      <div class="section-content">
-      <h2 id="cta-title">¿Querés arrancar tu camino keto con acompañamiento?</h2>
-      <p>Estamos acá para ayudarte con productos reales, info clara y escucha consciente 💚</p><a href="https://wa.me/5492984521812?text=Hola%20💚%20Quiero%20consultar%20sobre%20la%20guía%20keto%20y%20productos%20de%20Espacio%20Saludable" class="btn" style="background: var(--blanco); color: var(--verde-oscuro);" target="_blank" rel="noopener noreferrer">Hablemos por WhatsApp</a> <br><br><a href="/" class="btn btn-secondary">Volver al Inicio</a>
+      <h2 id="cta-title">¿Querés arrancar con acompañamiento?</h2>
+      <p>Tenemos productos reales y info clara para tu camino keto 💚</p><a href="https://wa.me/5492984521812?text=Hola%20💚%20Quiero%20consultar%20sobre%20la%20guía%20keto" class="btn" style="background: var(--blanco); color: var(--verde-oscuro);" target="_blank" rel="noopener noreferrer">Escribir a WhatsApp</a> <br><br><a href="/" class="btn btn-secondary">Volver al Inicio</a>
      </div>
     </section>
    </main><!-- Footer -->
