feat: integración guía vegana con estándares de accesibilidad y SEO

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🌱</span> <span class="guide-tag">Plant-Based</span>
         <h3>Guía Vegana</h3>
-        <p>Cómo vivir 100% plant-based con nutrición completa, suplementación y consciencia práctica.</p><a href="/guias/vegano" class="btn">Leer la Guía</a>
+        <p>Cómo vivir 100% plant-based con nutrición completa, suplementación y consciencia práctica.</p><a href="vegano.html" class="btn">Leer la Guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🌾</span> <span class="guide-tag">Celiaquía</span>
         <h3>Guía Sin TACC</h3>
