chore: add Sin TACC guide resources and styles; update README

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">🌾</span> <span class="guide-tag">Celiaquía</span>
         <h3>Guía Sin TACC</h3>
-        <p>Celiaquía y vida sin gluten: qué, cómo y con qué tranquilidad vivir de forma segura cada día.</p><a href="/guias/sin-tacc" class="btn">Leer la Guía</a>
+        <p>Celiaquía y vida sin gluten: qué, cómo y con qué tranquilidad vivir de forma segura cada día.</p><a href="assets/guides/sin-tacc.html" class="btn" target="_blank" rel="noopener noreferrer" aria-label="Leer guía completa Sin TACC · Espacio Saludable">Leer guía</a>
        </article>
        <article class="guide-card"><span class="guide-icon" aria-hidden="true">💙</span> <span class="guide-tag">Salud Metabólica</span>
         <h3>Guía Diabetes &amp; Glucosa</h3>
@@ -165,7 +165,13 @@
       <p>Dietética consciente basada en ciencia y diseñada con amor.</p>
      </div>
      <div class="footer-section">
-      <h4>Guías</h4><a href="/guias/keto">Keto</a> <a href="/guias/vegano">Vegano</a> <a href="/guias/sin-tacc">Sin TACC</a> <a href="/guias/diabetes">Diabetes</a> <a href="/guias/suplementos">Suplementos</a> <a href="/guias/espiritualidad">Espiritualidad</a>
+      <h4>Guías</h4>
+      <a href="/guias/keto">Keto</a>
+      <a href="/guias/vegano">Vegano</a>
+      <a href="assets/guides/sin-tacc.html">Sin TACC</a>
+      <a href="/guias/diabetes">Diabetes</a>
+      <a href="/guias/suplementos">Suplementos</a>
+      <a href="/guias/espiritualidad">Espiritualidad</a>
      </div>
      <div class="footer-section">
       <h4>Productos</h4><a href="/tienda/sin-tacc">Sin TACC</a> <a href="/tienda/vegano">Veganos</a> <a href="/tienda/suplementos">Suplementos</a> <a href="/tienda/tes">Tés y Blends</a> <a href="/tienda/gourmet">Gourmet</a>
